--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "build": "postcss src/styles.css -o dist/styles.css",
-    "watch": "postcss src/styles.css -o dist/styles.css --watch"
+    "build": "npx postcss src/styles.css -o dist/styles.css",
+    "watch": "npx postcss src/styles.css -o dist/styles.css --watch"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
